feat: update the branch in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: version-tag
         id: tag
-        uses: de-marauder/github-tag-action@master # if we use 1 there is a too-be-fixed bug https://github.com/de-marauder/github-tag-action/actions/runs/3139501775/jobs/5099976842#step:1:35 as alternative we could use v1
+        uses: de-marauder/github-tag-action@main
         env:
           VERBOSE: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -51,6 +51,5 @@ jobs:
           # update major tag
           git tag -f "$major"
           git push -f origin "$major"
-          # add vX as 1 is linked to short sha bug https://github.com/de-marauder/github-tag-action/actions/runs/3139501775/jobs/5099976842#step:1:35
           git tag -f "v$major"
           git push -f origin "v$major"
