--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,10 @@ jobs:
           git fetch --tags
           tagFmt="^v?[0-9]+\.[0-9]+\.[0-9]+$"
           tag="$(git for-each-ref --sort=-v:refname --format '%(refname:lstrip=2)' | grep -E "$tagFmt" | head -n 1)"
-          [[ "$tag" =~ ^([0-9]+) ]] # use ^(v[0-9]+) for vX
-          major=${BASH_REMATCH[1]}
-          # update major tag
-          git tag -f "$major"
-          git push -f origin "$major"
-          git tag -f "v$major"
-          git push -f origin "v$major"
+          [[ "$tag" =~ ^(v?)([0-9]+) ]] # Capture the "v" prefix (if it exists) and the major version number
+          prefix=${BASH_REMATCH[1]}
+          major=${BASH_REMATCH[2]}
+
+          # update major tag with the same prefix style as the original tag
+          git tag -f "${prefix}${major}"
+          git push -f origin "${prefix}${major}"
